# Cardamage

./: README.md
cardamagedetection/: app.py
cardamagedetection/alembic/: env.py
cardamagedetection/alembic/versions/: cd7247bbdc35_first_commit.py
cardamagedetection/cardamagedetection/: alembic.ini  pyproject.toml  template.py
cardamagedetection/cardamagedetection/cardamagedetection/components/: database.py  model.py
cardamagedetection/components/: database.py  model.py
cardamagedetection/constant/: application.py
