[project]
name = "cardamagedetection"
version = "0.1.0"
description = ""
authors = [
    {name = "Asha", email = "ashagillofficial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
fastapi-cli= "^ 0.0.4"
numpy = "^1.26.4"
uvicorn = "^0.30.1"
passlib = "^1.7.4"
sqlalchemy = "^2.0.31"
sqlalchemy-utils = "^0.41.2"
bcrypt = "^4.1.3"
pyyaml = "^6.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
cmake = "==3.25.2"
dill = "^0.3.8"
from-root = "^1.3.0"
notebook = "^6.4.10"
gdown = "^5.2.0"
databases = "^0.9.0"
pydantic = "^2.8.2"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
opencv-python = "^4.10.0.84"
dlib = "^19.24.1"
pandas = "^2.2.2"
mediapipe = "^0.10.14"
anthropic = "^0.36.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
